fix: bug bash fixes for account center and console UI (#8944)
- LOG-13553/LOG-13567: hide date input parts by default,
  show when focused/has value to prevent label overlap
- LOG-13568: fix SelectField padding override via
  higher specificity selector
- LOG-13558: add margin-top to inline notification
- LOG-13566: add 1060px breakpoint to hide sidebar
  on narrow desktop
- LOG-13564: remove isVisible from Tooltip deps
  to prevent flicker

--- a/packages/account/src/pages/Security/MfaSection/index.module.scss
+++ b/packages/account/src/pages/Security/MfaSection/index.module.scss
@@ -144,7 +144,7 @@
 }
 
 .notification {
-  margin: 0;
+  margin: _.unit(1) 0 0;
 }
 
 .toggleRow {
